# EVONAV

./: .gitignore  README.md  hooks.py  pyproject.toml
evonav/: boot.py  hooks.py  install.py  modules.txt  setup.py
evonav/evonav/doctype/evonav_settings/: evonav_settings.js  evonav_settings.json  evonav_settings.py
evonav/fixtures/: custom_field.json
evonav/overrides/: workspace_icon_sync.py
evonav/public/css/: navbar_hide.css
evonav/public/js/: evonav_loader.js  navbar_hide_payload.js
