[project]
name = "evonav"
authors = [
    { name = "Evonet", email = "admin@evonet.lk"}
]
description = "Frappe Desk navbar/sidebar tweaks: workspace icon sync + navbar item hiding"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # No external Python deps; relies on Frappe itself
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
